--- a/1-Data-Reshaping.ipynb
+++ b/1-Data-Reshaping.ipynb
@@ -3,51 +3,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Pandas Vol.2"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "在开始学习这份教程前，请确保你已学习下列内容：\n",
-    "- Dataframe的基本操作\n",
-    "- csv file I/O\n",
-    "- 切片\n",
-    "- 常用聚合函数的使用（如： `mean()` ,  `max()` ）\n",
-    "- 排序\n",
-    "- 查询（条件选择器 & `query()` ）\n",
-    "- `groupby()`\n",
-    "- `apply()`\n",
-    "- `map()`"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "repo中附的Pandas Cheat Sheet介绍了大部分常用的操作，包括："
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "## 1. 数据重塑\n",
     "\n",
     "数据重塑函数可以将单个或多个DataFrame重塑为需要的格式"
@@ -81,11 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
+    "import pandas as pd"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
     "df = pd.DataFrame(\n",
     "    {\"Name\": {0: \"Adam\", 1: \"Bob\", 2: \"Ciel\"},\n",
     "     \"Program\": {0: \"DS\", 1: \"CV\", 2: \"DS\"},\n",
@@ -101,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "   Name Program  Grade\n0  Adam      DS     10\n1   Bob      CV     12\n2  Ciel      DS     11",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Program</th>\n      <th>Grade</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Adam</td>\n      <td>DS</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Bob</td>\n      <td>CV</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ciel</td>\n      <td>DS</td>\n      <td>11</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "  variable value\n0     Name  Adam\n1     Name   Bob\n2     Name  Ciel\n3  Program    DS\n4  Program    CV\n5  Program    DS\n6    Grade    10\n7    Grade    12\n8    Grade    11",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>variable</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Name</td>\n      <td>Adam</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Name</td>\n      <td>Bob</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Name</td>\n      <td>Ciel</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Program</td>\n      <td>DS</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Program</td>\n      <td>CV</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Program</td>\n      <td>DS</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Grade</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Grade</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Grade</td>\n      <td>11</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "   Name variable value\n0  Adam  Program    DS\n1   Bob  Program    CV\n2  Ciel  Program    DS",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>variable</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Adam</td>\n      <td>Program</td>\n      <td>DS</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Bob</td>\n      <td>Program</td>\n      <td>CV</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ciel</td>\n      <td>Program</td>\n      <td>DS</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "   Name Program variable  value\n0  Adam      DS    Grade     10\n1   Bob      CV    Grade     12\n2  Ciel      DS    Grade     11",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Program</th>\n      <th>variable</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Adam</td>\n      <td>DS</td>\n      <td>Grade</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Bob</td>\n      <td>CV</td>\n      <td>Grade</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ciel</td>\n      <td>DS</td>\n      <td>Grade</td>\n      <td>11</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +170,7 @@
    "source": [
     "### pivot()\n",
     "\n",
-    "**反向melt**\n",
+    "**melt()的逆操作**\n",
     "\n",
     "参数：\n",
     "- index：作为索引的列\n",
@@ -218,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "df = pd.melt(pd.DataFrame(\n",
@@ -236,14 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "   Name variable value\n0  Adam  Program    DS\n1   Bob  Program    CV\n2  Ciel  Program    DS\n3  Adam    Grade    10\n4   Bob    Grade    12\n5  Ciel    Grade    11",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>variable</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Adam</td>\n      <td>Program</td>\n      <td>DS</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Bob</td>\n      <td>Program</td>\n      <td>CV</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Ciel</td>\n      <td>Program</td>\n      <td>DS</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Adam</td>\n      <td>Grade</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Bob</td>\n      <td>Grade</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Ciel</td>\n      <td>Grade</td>\n      <td>11</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,162 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "         value        \nvariable Grade Program\nName                  \nAdam        10      DS\nBob         12      CV\nCiel        11      DS",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead tr th {\n        text-align: left;\n    }\n\n    .dataframe thead tr:last-of-type th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr>\n      <th></th>\n      <th colspan=\"2\" halign=\"left\">value</th>\n    </tr>\n    <tr>\n      <th>variable</th>\n      <th>Grade</th>\n      <th>Program</th>\n    </tr>\n    <tr>\n      <th>Name</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Adam</th>\n      <td>10</td>\n      <td>DS</td>\n    </tr>\n    <tr>\n      <th>Bob</th>\n      <td>12</td>\n      <td>CV</td>\n    </tr>\n    <tr>\n      <th>Ciel</th>\n      <td>11</td>\n      <td>DS</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.pivot(df, index=[\"Name\"], columns=[\"variable\"])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## 2. 数据合并"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### concat()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "outputs": [],
-   "source": [
-    "df1 = pd.DataFrame(\n",
-    "    [[1, 2, 3],\n",
-    "     [4, 5, 6]]\n",
-    ")\n",
-    "\n",
-    "df2 = pd.DataFrame(\n",
-    "    [[7, 8, 9],\n",
-    "     [10, 11, 12]]\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   0  1  2\n0  1  2  3\n1  4  5  6",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>5</td>\n      <td>6</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "    0   1   2\n0   7   8   9\n1  10  11  12",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>7</td>\n      <td>8</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10</td>\n      <td>11</td>\n      <td>12</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "    0   1   2\n0   1   2   3\n1   4   5   6\n0   7   8   9\n1  10  11  12",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>5</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>7</td>\n      <td>8</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10</td>\n      <td>11</td>\n      <td>12</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.concat([df1, df2])  # 纵向拼接"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   0  1  2   0   1   2\n0  1  2  3   7   8   9\n1  4  5  6  10  11  12",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>2</td>\n      <td>3</td>\n      <td>7</td>\n      <td>8</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>5</td>\n      <td>6</td>\n      <td>10</td>\n      <td>11</td>\n      <td>12</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.concat([df1, df2], axis=1)  # 横向拼接"
    ],
    "metadata": {
     "collapsed": false,
