Appended Test Ver1

--- a/0-Pandas-Tutorial-Vol2.ipynb
+++ b/0-Pandas-Tutorial-Vol2.ipynb
@@ -17,14 +17,14 @@
    "source": [
     "在开始学习这份教程前，请确保你已学习下列内容：\n",
     "- Dataframe的基本操作\n",
-    "- csv file I/O\n",
-    "- 切片\n",
-    "- 常用聚合函数的使用（如： `mean()` ,  `max()` ）\n",
+    "- csv文件的读取与存储\n",
+    "- 切片（列名 & loc()）\n",
+    "- 常用聚合函数的使用（如：mean(), max()）\n",
     "- 排序\n",
-    "- 查询（条件选择器 & `query()` ）\n",
-    "- `groupby()`\n",
-    "- `apply()`\n",
-    "- `map()`"
+    "- 查询（条件选择器 & query()）\n",
+    "- groupby()\n",
+    "- apply()\n",
+    "- map()"
    ],
    "metadata": {
     "collapsed": false,
@@ -38,8 +38,13 @@
    "source": [
     "repo中附的Pandas Cheat Sheet介绍了大部分常用的操作，包括：\n",
     "\n",
-    "1. 数据重塑\n",
-    "2. 数据合并"
+    "1. 数据重塑 (melt(), pivot())\n",
+    "2. 数据合并 (concat(), merge())\n",
+    "3. unique()\n",
+    "4. count()\n",
+    "5. idxmax()\n",
+    "6. clip()\n",
+    "7."
    ],
    "metadata": {
     "collapsed": false,
