--- a/1-Data-Reshaping.ipynb
+++ b/1-Data-Reshaping.ipynb
@@ -54,9 +54,9 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(\n",
-    "    {\"Name\": {0: \"Adam\", 1: \"Bob\", 2: \"Ciel\"},\n",
-    "     \"Program\": {0: \"DS\", 1: \"CV\", 2: \"DS\"},\n",
-    "     \"Grade\": {0: 10, 1: 12, 2: 11}}\n",
+    "    {\"Name\": [\"Adam\", \"Bob\", \"Ciel\"],\n",
+    "     \"Program\": [\"DS\", \"CV\", \"DS\"],\n",
+    "     \"Grade\": [10, 12, 11]}\n",
     ")"
    ],
    "metadata": {
@@ -189,9 +189,9 @@
    "outputs": [],
    "source": [
     "df = pd.melt(pd.DataFrame(\n",
-    "    {\"Name\": {0: \"Adam\", 1: \"Bob\", 2: \"Ciel\"},\n",
-    "     \"Program\": {0: \"DS\", 1: \"CV\", 2: \"DS\"},\n",
-    "     \"Grade\": {0: 10, 1: 12, 2: 11}}\n",
+    "    {\"Name\": [\"Adam\", \"Bob\", \"Ciel\"],\n",
+    "     \"Program\": [\"DS\", \"CV\", \"DS\"],\n",
+    "     \"Grade\": [10, 12, 11]}\n",
     "), id_vars=[\"Name\"])"
    ],
    "metadata": {
