--- a/2-Data-Combining.ipynb
+++ b/2-Data-Combining.ipynb
@@ -41,13 +41,13 @@
    "outputs": [],
    "source": [
     "df1 = pd.DataFrame(\n",
-    "    {\"Name\": {0: \"Al\", 1: \"Bob\"},\n",
-    "     \"Program\": {0: \"NLP\", 1: \"CV\"}}\n",
+    "    {\"Name\": [\"Al\", \"Bob\"],\n",
+    "     \"Program\": [\"NLP\", \"CV\"]}\n",
     ")\n",
     "\n",
     "df2 = pd.DataFrame(\n",
-    "    {\"Name\": {0: \"Ciel\", 1: \"Dio\"},\n",
-    "     \"Program\": {0: \"DS\", 1: \"Law\"}}\n",
+    "    {\"Name\": [\"Ciel\", \"Dio\"],\n",
+    "     \"Program\": [\"DS\", \"Law\"]}\n",
     ")"
    ],
    "metadata": {
@@ -159,9 +159,9 @@
    "outputs": [],
    "source": [
     "df3 = pd.DataFrame(\n",
-    "    {\"Name\": {0: \"Ciel\", 1: \"Dio\"},\n",
-    "     \"Program\": {0: \"DS\", 1: \"Law\"},\n",
-    "     \"Grade\": {0: 11, 1: 13}}\n",
+    "    {\"Name\": [\"Ciel\", \"Dio\"],\n",
+    "     \"Program\": [\"DS\", \"Law\"],\n",
+    "     \"Grade\": [11, 13]}\n",
     ")"
    ],
    "metadata": {
@@ -267,13 +267,13 @@
    "outputs": [],
    "source": [
     "df1 = pd.DataFrame(\n",
-    "    {\"Name\": {0: \"Adam\", 1: \"Bob\", 2: \"Ciel\"},\n",
-    "     \"Program\": {0: \"DS\", 1: \"CV\", 2: \"DS\"}}\n",
+    "    {\"Name\": [\"Adam\", \"Bob\", \"Ciel\"],\n",
+    "     \"Program\": [\"DS\", \"CV\", \"DS\"]}\n",
     ")\n",
     "\n",
     "df2 = pd.DataFrame(\n",
-    "    {\"Name\": {0: \"Adam\", 1: \"Bob\", 2: \"Dio\"},\n",
-    "     \"Grade\": {0: 10, 1: 12, 2: 13}}\n",
+    "    {\"Name\": [\"Adam\", \"Bob\", \"Dio\"],\n",
+    "     \"Grade\": [10, 12, 13]}\n",
     ")"
    ],
    "metadata": {
