--- a/0-Pandas-Tutorial-Vol2.ipynb
+++ b/0-Pandas-Tutorial-Vol2.ipynb
@@ -40,11 +40,14 @@
     "\n",
     "1. 数据重塑 (melt(), pivot())\n",
     "2. 数据合并 (concat(), merge())\n",
-    "3. unique()\n",
-    "4. count()\n",
-    "5. idxmax()\n",
+    "3. 数据总结 (count(), unique())\n",
+    "\n",
+    "我们还会另外cover几个常用函数：\n",
+    "\n",
+    "4. idxmax()\n",
+    "5. nlargest()\n",
     "6. clip()\n",
-    "7."
+    "7. replace()"
    ],
    "metadata": {
     "collapsed": false,
