--- a/Pandas-Test.ipynb
+++ b/Pandas-Test.ipynb
@@ -17,9 +17,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 测试1\n",
+    "### 测试\n",
     "\n",
-    "请将以下两个DataFrame中的数据转换为以Name为索引，Subject为列名的格式（删除多余的数据）"
+    "请将以下两个DataFrame中的数据转换为以Name为索引，Subject为列名的格式（删除多余的数据），并合并。"
    ],
    "metadata": {
     "collapsed": false,
