--- a/2-Data-Combining.ipynb
+++ b/2-Data-Combining.ipynb
@@ -3,8 +3,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 2. 数据合并\n",
-    "\n",
+    "## 2. 数据合并"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### concat()\n",
     "\n",
     "适合在两个DataFrame列相同时使用\n",
